Bug with new Windows function removed. Bug with Choosing Colour removed.
Bug with new Windows function removed:
There was a bug if the text was longer, it overflows the whole window. Added new height variables and also a scrollbar.

Bug with Choosing Colour removed:
If Player choosed other Colour, the Coin Animation was incorrect and also there was a problem with storing  the Colour Checkbox value correct and show the correect value after Page refresh. Solved that with local Storage & Game Object storing like in the Audio Section.

--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -292,6 +292,7 @@ footer{
    right: 0;
    top: 1.35vh;
    filter: invert(1);
+   z-index: 11;
 }
 
 #ID_Settings:hover {
@@ -1119,49 +1120,43 @@ to{
                               /*    Windows    */
 
 .Class_Window{
-   min-height: 40vh;
+   min-height: 30vh;
+   max-height: 75vh;
    width: 50%;
+   z-index: 10;
    position: absolute;
    top: 10%;
    left: 25%;
    display: grid;
-   grid: 1rem auto / 1fr;
+   grid: 1rem auto 1rem / 1fr;
    justify-items:center;
    text-align: center;
    background-color: grey;
    border: solid 1px black;
-   }
-
-.Class_Window_Notification{
-   line-height: 0;
-   min-width: 100%;
-   font-size:x-small;
+   font-size:xx-small;
    color: white;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
+   text-align: center;
+   }
 
 .Class_Inner_Window{
    width:  calc(100% - 2rem);
-   height: calc(100% - 1rem);
-   overflow:scroll;
    display: grid;
-   grid: 2rem auto 5rem / 1fr;
-   grid-auto-rows:max-content ;
+   grid:  2rem auto 4rem / 1fr;
+   max-block-size: 65vh;
    justify-items: center;
    align-items: center;
    background-color: white;
    color: black;
    border: solid 1px black;
-}
-
-.Class_Inner_Window h3{
-   
+   font-size: small;
 }
 
 .Class_Inner_Window p {
    align-self: center;
+   margin-top: 2rem;
+   height: 100%;
+   overflow: scroll;  
+   
 }
 
 .Class_Inner_Window input{
@@ -1180,6 +1175,7 @@ to{
 
 .Class_Inner_Window button{
    width: 5rem;
+   height: 2rem;
    border: solid 1px black;
 }
 /* #endregion */ 
